--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -11,15 +11,15 @@
 		<h1>Our Menu</h1>
 
 		<div class="col-lg-4 col-md-6 col-sm-12" id="container">
-		<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Deserunt ab quia eum possimus debitis illo consequuntur cum impedit! Non hic ratione minus reiciendis esse laboriosam rem fugit, quam ut iure! Proin augue felis, egestas id rhoncus id, suscipit sed massa. Donec tristique mauris id lectus gravida, at laoreet felis aliquet. Curabitur pharetra hendrerit sapien a aliquam. Curabitur laoreet orci mi, a viverra diam sollicitudin sit amet. </p>
+		<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Deserunt ab quia eum possimus debitis illo consequuntur cum impedit! Non hic ratione minus reiciendis esse laboriosam rem fugit, quam ut iure! Proin augue felis, egestas id rhoncus id, suscipit sed massa.</p>
 		<p id="p1">Chicken</p>
 		</div>
 
-		<div class="col-lg-4 col-md-6 col-sm-12" id="containertwo"><p>Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Quis, iste, nostrum dignissimos unde officiis doloremque debitis fugit ut! Voluptate odit nam unde harum aliquam aperiam quibusdam quod corrupti provident pariatur! Proin augue felis, egestas id rhoncus id, suscipit sed massa. Donec tristique mauris id lectus gravida, at laoreet felis aliquet. Curabitur pharetra hendrerit sapien a aliquam. Curabitur laoreet orci mi, a viverra diam sollicitudin sit amet.</p>
+		<div class="col-lg-4 col-md-6 col-sm-12" id="containertwo"><p>Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Quis, iste, nostrum dignissimos unde officiis doloremque debitis fugit ut! Voluptate odit nam unde harum aliquam aperiam quibusdam quod corrupti provident pariatur! Proin augue felis, egestas id rhoncus id, suscipit sed massa.</p>
 		<p id="p2">Beef</p>
 		</div>
 
-		<div class="col-lg-4 col-md-12 col-sm-12" id="containerthree"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, earum omnis natus voluptate, repudiandae inventore molestias eos reprehenderit corrupti nesciunt animi ea obcaecati vero numquam porro quidem? Numquam at, et! Proin augue felis, egestas id rhoncus id, suscipit sed massa. Donec tristique mauris id lectus gravida, at laoreet felis aliquet. Curabitur pharetra hendrerit sapien a aliquam. Curabitur laoreet orci mi, a viverra diam sollicitudin sit amet.</p>
+		<div class="col-lg-4 col-md-12 col-sm-12" id="containerthree"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, earum omnis natus voluptate, repudiandae inventore molestias eos reprehenderit corrupti nesciunt animi ea obcaecati vero numquam porro quidem? Numquam at, et! Proin augue felis, egestas id rhoncus id, suscipit sed massa.</p>
 		<p  id="p3">Sushi</p>
 		</div>
 	</div>	
